@@ -4,6 +4,7 @@
 	* use pileup reweighting tool from TopToolStore
 	* add cut on presence of primary vertex for data
 	* use recommended TTVA cuts for loose leptons also
+	* add electron_sharesTrk for offline el/mu overlap removal a la ASG, should be double checked
 
 2016-04-28 Peter Onyisi <ponyisi@cern.ch>
 	* Save indices of jets passing OR (selected_jets, selected_jets_T)
